--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,6 +80,10 @@ nav li {
     margin-bottom: 30px;
 }
 
+section {
+    margin-top: 130px;
+}
+
 /* main section */
 main {
     max-width: 1140px;
@@ -96,10 +100,12 @@ main {
 }
 
 .section-title {
-    text-align: center;
+
     margin-bottom: 30px;
     font-weight: 700px;
     font-size: 35px;
+    text-align: center;
+    margin-bottom: 50px;
 
 
 }
@@ -129,4 +135,60 @@ main {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill-title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.skills-description {
+    color: #757575;
+}
+
+/* remue styles */
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;;
+}
+
+.resume .sub-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+}
+
+.resume .description {
+    font-size: 16px;
+    color: #757575;
+}
+.resume-item{
+    margin-top:30px;
+    margin-bottom:30px;
+}
+.resume-botton{
+    margin-top:50px;
+    text-align: center;
 }
