--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -192,3 +192,23 @@ main {
     margin-top:50px;
     text-align: center;
 }
+/* contract style */
+.contract{
+    display: flex;
+    gap: 117px;
+    padding: 130px 200px;
+    background-color: #FFF8F3;;
+
+}
+.contract .section-title{
+    text-align: left;
+}
+.contract input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+.contract a{
+    text-decoration: none;
+}
