--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,6 +49,14 @@ nav li {
     padding: 18px 35px;
 }
 
+.ctn-primary {
+    width: 160px;
+    height: 64px;
+    border: 1px solid;
+    font-weight: 700;
+    font-size: 20px;
+}
+
 /* banner design */
 .banner {
     margin-top: 0;
@@ -171,7 +179,8 @@ main {
     font-weight: 700;
     font-size: 25px;
     color: #474747;
-    margin-bottom: 10px;;
+    margin-bottom: 10px;
+    ;
 }
 
 .resume .sub-title {
@@ -184,31 +193,40 @@ main {
     font-size: 16px;
     color: #757575;
 }
-.resume-item{
-    margin-top:30px;
-    margin-bottom:30px;
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-.resume-botton{
-    margin-top:50px;
+
+.resume-botton {
+    margin-top: 50px;
     text-align: center;
 }
+
 /* contract style */
-.contract{
+.contract {
     display: flex;
     gap: 117px;
     padding: 130px 200px;
-    background-color: #FFF8F3;;
+    background-color: #FFF8F3;
+    ;
 
 }
-.contract .section-title{
+
+.contract .section-title {
     text-align: left;
 }
-.contract input[type="text"], input[type="email"], textarea{
+
+.contract input[type="text"],
+input[type="email"],
+textarea {
     margin-bottom: 24px;
     border: 0;
     width: 100%;
     padding: 18px 30px;
 }
-.contract a{
+
+.contract a {
     text-decoration: none;
 }
